# strategy-processor

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  ci_cd.yml
.zed/: debug.json
src/: main.rs
src/config/: mod.rs
src/converter/: base.rs  bb_conv.rs  crossing_avg_conv.rs  df_converter.rs  mod.rs  rsi_conv.rs
src/db/: db.rs  mod.rs
src/fetch/: mod.rs  stock_fetcher.rs
src/handler/: mod.rs
src/jobs/: mod.rs
src/processor/: base.rs  bollinger_bands.rs  crossing_avg.rs  crossing_ma.rs  df_proc.rs  mod.rs  rsi.rs
src/scanner/: backtest.rs  mod.rs  scanner.rs  scanner_bb.rs  scanner_ma.rs  scanner_rsi.rs
src/strategy/: bollinger_bands.rs  crossing_ma.rs  mod.rs  rsi.rs
